--- a/src/stylesheets/modules/_navigation.scss
+++ b/src/stylesheets/modules/_navigation.scss
@@ -1,5 +1,7 @@
 .nav-bar {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     background: $clear;
     color: $white;
@@ -8,7 +10,6 @@
     justify-content: flex-end;
     align-items: center;
     transition: all 0.2s ease-in-out;
-    // z-index: 2;
     padding-right: 100px;
     &:hover {
         color: $notsoblack;
